--- a/tests/unit/colorpickersplitbutton/tests.html
+++ b/tests/unit/colorpickersplitbutton/tests.html
@@ -12,9 +12,9 @@
 	
 	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
      
-	<script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
+	<!-- <script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="../../../bower_components/jquery-tmpl/jquery.tmpl.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script> -->
 	<script type="text/javascript" src="../../../bower_components/qunit/qunit/qunit.js"></script>
 
     <script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
