--- a/tests/unit/templating/tests.html
+++ b/tests/unit/templating/tests.html
@@ -60,7 +60,7 @@
 		};
 		$(document).ready(function () {
 			initialized = false;
-			module("igTemplating", {
+			QUnit.module("igTemplating", {
 				setup: function() {
 					//pause testing until tree is initialized
 					if (!initialized) {
@@ -95,17 +95,17 @@
 			testId19 = "igTemplating handling objects with 'length' property";
 			testId20 = "igTemplating properties with dashes";
 
-			test(testId1, function () {
-				ok($.ig, '$.ig is undefined');
-				ok($.ig.regExp, '$.ig.regExp object is undefined');
-				equal(typeof $.ig.regExp, 'object', 'Type of $.ig.regExp is not an object');
-				ok($.ig._directives, '$.ig.directives object is undefined');
-				equal(typeof $.ig._directives, 'object', 'Type of $.ig.directives is not an object');
-				ok($.ig.tmpl, '$.ig.tmpl function is undefined');
-				equal(typeof $.ig.tmpl, 'function', 'Type of $.ig.tmpl is not a function');
+			QUnit.test(testId1, function () {
+				QUnit.ok($.ig, '$.ig is undefined');
+				QUnit.ok($.ig.regExp, '$.ig.regExp object is undefined');
+				QUnit.equal(typeof $.ig.regExp, 'object', 'Type of $.ig.regExp is not an object');
+				QUnit.ok($.ig._directives, '$.ig.directives object is undefined');
+				QUnit.equal(typeof $.ig._directives, 'object', 'Type of $.ig.directives is not an object');
+				QUnit.ok($.ig.tmpl, '$.ig.tmpl function is undefined');
+				QUnit.equal(typeof $.ig.tmpl, 'function', 'Type of $.ig.tmpl is not a function');
 			});
 
-			test(testId2, function () {
+			QUnit.test(testId2, function () {
 				var tmpl1 = '<div #Some comment#>Test # Comment goes in here # </div>',
 					tmpl = '<a href="#">${Template}</a><a href="#"></a>',
 					tmpl2 = '<a href="#">Nothing should be replaced</a><a href="#">yeah?</a>',
@@ -113,12 +113,12 @@
 					result = $.ig.tmpl(tmpl, data1),
 					result2 = $.ig.tmpl(tmpl2, data1);
 
-				equal(result2, '<a href="#">Nothing should be replaced</a><a href="#">yeah?</a>', 'Templating handled incorrectly a no template string.');
-				equal(result1, '<div>Test </div>', 'Comment was not correctly removed from the template');
-				equal(result, '<a href="#">Success</a><a href="#"></a>', 'Comment was not correctly removed from the template');
+				QUnit.equal(result2, '<a href="#">Nothing should be replaced</a><a href="#">yeah?</a>', 'Templating handled incorrectly a no template string.');
+				QUnit.equal(result1, '<div>Test </div>', 'Comment was not correctly removed from the template');
+				QUnit.equal(result, '<a href="#">Success</a><a href="#"></a>', 'Comment was not correctly removed from the template');
 			});
 
-			test(testId3, function () {
+			QUnit.test(testId3, function () {
 				var tmpl1 = 'invalid ${Template}',
 					tmpl2 = '<div id="${ID}">${Template} valid</div>',
 					tmpl5 = '<img src="${Template}" />',
@@ -131,23 +131,23 @@
 					result5 = $.ig.tmpl(tmpl2, function2, [3]),
 					result6 = $.ig.tmpl(tmpl3, data2),
 					result7 = $.ig.tmpl(tmpl5, data1);
-				equal(result1, 'invalid Success', 'Invalid template was handled wrong by the templating engine');
-				equal(result2, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
-				equal(result3, 'invalid Success', 'Invalid template was handled wrong by the templating engine');
-				equal(result4, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
-				equal(result5, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
-				equal(result6, '<span id="1">Item 1</span><span id="2">Item 2</span><span id="3">Item 3</span>', 'Template is incorrectly handled by the engine');
-				equal(result7, '<img src="Success" />', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result1, 'invalid Success', 'Invalid template was handled wrong by the templating engine');
+				QUnit.equal(result2, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result3, 'invalid Success', 'Invalid template was handled wrong by the templating engine');
+				QUnit.equal(result4, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result5, '<div id="">Success valid</div>', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result6, '<span id="1">Item 1</span><span id="2">Item 2</span><span id="3">Item 3</span>', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result7, '<img src="Success" />', 'Template is incorrectly handled by the engine');
 			});
 
-			test(testId4, function () {
+			QUnit.test(testId4, function () {
 				var tmpl = '<span id="${Value}">$i: ${Text}</span>',
 					result = $.ig.tmpl(tmpl, data2);
 
-				equal(result, '<span id="1">0: Item 1</span><span id="2">1: Item 2</span><span id="3">2: Item 3</span>', 'Template is incorrectly handled by the engine');
+				QUnit.equal(result, '<span id="1">0: Item 1</span><span id="2">1: Item 2</span><span id="3">2: Item 3</span>', 'Template is incorrectly handled by the engine');
 			});
 
-			test(testId5, function () {
+			QUnit.test(testId5, function () {
 				var tmpl = '{{if $i % 2 === 0}}<span id="${Value}" class="ui-even">${Text}</span>{{else}}<span id="${Value}" class="ui-odd">${Text}</span>{{/if}}',
 					tmpl1 = '{{if true}}<span class="ui-even">${Template}</span>{{/if}}',
 					tmpl2 = '{{if ${Cond} }}${Value}{{elseif ${Value} == 3}}${Text}{{else}}Testing{{/if}}',
@@ -156,42 +156,42 @@
 					result1 = $.ig.tmpl(tmpl1, data1),
 					result2 = $.ig.tmpl(tmpl2, function2);
 					result3 = $.ig.tmpl(tmpl3, [{ Field: { Value1: 1, Value2: 0 }, Field2: null }, { Field: null, Field2: { Value3: 'a' } }]);
-				ok($.ig.regExp.block.test(tmpl), 'Block regular expression did not match if-else block');
-				equal(result, '<span id="1" class="ui-even">Item 1</span><span id="2" class="ui-odd">Item 2</span><span id="3" class="ui-even">Item 3</span>', 'Iterative If-else directive was not correctly handled by the templating engine');
-				equal(result1, '<span class="ui-even">Success</span>', 'Non iterative if-else failed.');
-				equal(result2, 'Testing2Item 3', 'If-elseif-else conditional failed.');
-				equal(result3, '1 > 0a', 'Null or undefined check for properties failed.');
+				QUnit.ok($.ig.regExp.block.test(tmpl), 'Block regular expression did not match if-else block');
+				QUnit.equal(result, '<span id="1" class="ui-even">Item 1</span><span id="2" class="ui-odd">Item 2</span><span id="3" class="ui-even">Item 3</span>', 'Iterative If-else directive was not correctly handled by the templating engine');
+				QUnit.equal(result1, '<span class="ui-even">Success</span>', 'Non iterative if-else failed.');
+				QUnit.equal(result2, 'Testing2Item 3', 'If-elseif-else conditional failed.');
+				QUnit.equal(result3, '1 > 0a', 'Null or undefined check for properties failed.');
 			});
 
-			test(testId7, function () {
+			QUnit.test(testId7, function () {
 				var tmpl = "<li>X: ${point.x}, Y: ${point.y}</li>",
 					result = $.ig.tmpl(tmpl, points);
 
-				equal(result, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 3, Y: 3</li><li>X: 4, Y: 4</li><li>X: 5, Y: 5</li><li>X: 6, Y: 6</li><li>X: 7, Y: 7</li><li>X: 8, Y: 8</li><li>X: 9, Y: 9</li>', 'Each directive templating failed.');
+				QUnit.equal(result, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 3, Y: 3</li><li>X: 4, Y: 4</li><li>X: 5, Y: 5</li><li>X: 6, Y: 6</li><li>X: 7, Y: 7</li><li>X: 8, Y: 8</li><li>X: 9, Y: 9</li>', 'Each directive templating failed.');
 				var tmpl1 = '{{if ${point.x} == 1}}${point.y}{{/if}}',
 					result = $.ig.tmpl(tmpl1, points);
-				equal(result, 1, 'The result did not match');
+				QUnit.equal(result, 1, 'The result did not match');
 			});
 
-			test(testId6, function () {
+			QUnit.test(testId6, function () {
 				var tmpl = "{{each ${point} }}<li>X: ${point.x}, Y: ${point.y}</li>{{/each}}",
 					result = $.ig.tmpl(tmpl, data3),
 					tmpl1 = "{{each ${point}}}<li>X: ${point.x}, Y: ${point.y}</li>{{/each}}",
 					result1 = $.ig.tmpl(tmpl1, data3);
 
-				equal(result, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 1a, Y: 1a</li><li>X: 2a, Y: 2a</li>', 'Each directive templating failed.');
-				equal(result1, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 1a, Y: 1a</li><li>X: 2a, Y: 2a</li>', 'Each directive templating failed.');
+				QUnit.equal(result, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 1a, Y: 1a</li><li>X: 2a, Y: 2a</li>', 'Each directive templating failed.');
+				QUnit.equal(result1, '<li>X: 1, Y: 1</li><li>X: 2, Y: 2</li><li>X: 1a, Y: 1a</li><li>X: 2a, Y: 2a</li>', 'Each directive templating failed.');
 			});
 
-			test(testId8, function () {
+			QUnit.test(testId8, function () {
 				var encodeData = [
 					{ html: '<div>Item 1&</div>' },
 					{ html: '<div>Item 2&</div>' },
 					{ html: '<div>Item 3&</div>' }
 				];
 				var tmpl = '${html}', result = $.ig.tmpl(tmpl, encodeData), tmpl2 = '{{html html}}', result1 = $.ig.tmpl(tmpl2, encodeData);
-				equal(result, "&lt;div&gt;Item 1&amp;&lt;/div&gt;&lt;div&gt;Item 2&amp;&lt;/div&gt;&lt;div&gt;Item 3&amp;&lt;/div&gt;", 'The result did not get encoded');
-				equal(result1, '<div>Item 1&</div><div>Item 2&</div><div>Item 3&</div>', 'Non-encode properties did not yield correct results');
+				QUnit.equal(result, "&lt;div&gt;Item 1&amp;&lt;/div&gt;&lt;div&gt;Item 2&amp;&lt;/div&gt;&lt;div&gt;Item 3&amp;&lt;/div&gt;", 'The result did not get encoded');
+				QUnit.equal(result1, '<div>Item 1&</div><div>Item 2&</div><div>Item 3&</div>', 'Non-encode properties did not yield correct results');
 
 				var encodeComplexData = [
 					{ html: { html: '<div>Item 1&</div>'} },
@@ -202,11 +202,11 @@
 				result = $.ig.tmpl(tmpl, encodeComplexData);
 				tmpl2 = '{{html html.html}}';
 				result1 = $.ig.tmpl(tmpl2, encodeComplexData);
-				equal(result, "&lt;div&gt;Item 1&amp;&lt;/div&gt;&lt;div&gt;Item 2&amp;&lt;/div&gt;&lt;div&gt;Item 3&amp;&lt;/div&gt;", 'The result did not get encoded');
-				equal(result1, '<div>Item 1&</div><div>Item 2&</div><div>Item 3&</div>', 'Non-encode properties did not yield correct results');
+				QUnit.equal(result, "&lt;div&gt;Item 1&amp;&lt;/div&gt;&lt;div&gt;Item 2&amp;&lt;/div&gt;&lt;div&gt;Item 3&amp;&lt;/div&gt;", 'The result did not get encoded');
+				QUnit.equal(result1, '<div>Item 1&</div><div>Item 2&</div><div>Item 3&</div>', 'Non-encode properties did not yield correct results');
 			});
 
-			test(testId9, function () {
+			QUnit.test(testId9, function () {
 				var nestedData = [
 					{prop1: 0, prop2: 1, prop3: 2},
 					{prop1: '00', prop2: 10, prop3: 20},
@@ -215,47 +215,47 @@
 				var tmpl = '{{if ${prop1} !== 0}}{{if ${prop2} !== 100}}Value: ${prop3}{{else}}Value: ${prop2}{{/if}}{{else}}Value: ${prop1}{{/if}}',
 					result = $.ig.tmpl(tmpl, nestedData);
 
-				equal(result, "Value: 0Value: 20Value: 100", 'Nested conditionals were not handled correctly.');
+				QUnit.equal(result, "Value: 0Value: 20Value: 100", 'Nested conditionals were not handled correctly.');
 			});
 
-			test(testId10, function () {
+			QUnit.test(testId10, function () {
 				var tmpl = '<tr id="${Value}">{{if ${Cond} }}<td>Text: ${Text}</td>{{else}}<td>&nbsp;</td>{{/if}}</tr>',
 					result = $.ig.tmpl(tmpl, data2);
 
-				equal(result, '<tr id="1"><td>&nbsp;</td></tr><tr id="2"><td>Text: Item 2</td></tr><tr id="3"><td>&nbsp;</td></tr>' , 'Combining content with blocks was not handled correctly by the templating engine.');
+				QUnit.equal(result, '<tr id="1"><td>&nbsp;</td></tr><tr id="2"><td>Text: Item 2</td></tr><tr id="3"><td>&nbsp;</td></tr>' , 'Combining content with blocks was not handled correctly by the templating engine.');
 			});
 
-			test(testId11, function () {
+			QUnit.test(testId11, function () {
 				var tmpl = '{{if ${Value} == 1}} ${Value} {{/if}}',
 					result = $.ig.tmpl(tmpl, data2),
 					tmpl1 = '{{if ${Value}== 1}} ${Value}{{/if}}'
 					result1 = $.ig.tmpl(tmpl1, data2);
 
-				equal(result, ' 1 ');
-				equal(result1, ' 1');
+				QUnit.equal(result, ' 1 ');
+				QUnit.equal(result1, ' 1');
 			});
 
-			test(testId12, function () {
+			QUnit.test(testId12, function () {
 				var tmpl = '<ul>{{each ${entries}}}<li>$index: $data</li>{{/each}}</ul>',
 					entry = [{ entries: [1, 2, 3, 4]}],
 					result = $.ig.tmpl(tmpl, entry);
 
-				equal(result, '<ul><li>0: 1</li><li>1: 2</li><li>2: 3</li><li>3: 4</li></ul>', '$data and $index were not evaluated correctly by the templating engine.');
+				QUnit.equal(result, '<ul><li>0: 1</li><li>1: 2</li><li>2: 3</li><li>3: 4</li></ul>', '$data and $index were not evaluated correctly by the templating engine.');
 			});
 
-			test(testId13, function () {
+			QUnit.test(testId13, function () {
 				var tmpl = '<div>${entries}</div>',
 					entry = [{ entries: '$0'}],
 					result = $.ig.tmpl(tmpl, entry),
 					entry1 = [{ entries: '$0'}, { entries: '$0'}, { entries: '$0'}],
 					result1 = $.ig.tmpl(tmpl, entry1);
 
-				ok($.ig._internalTmplCache.hasOwnProperty(tmpl), 'The template was not cached');
-				equal(result, '<div>$0</div>', 'The string.replace parameterized $0.');
-				equal(result1, '<div>$0</div><div>$0</div><div>$0</div>', 'The string.replace parameterized $0 in an array.');
+				QUnit.ok($.ig._internalTmplCache.hasOwnProperty(tmpl), 'The template was not cached');
+				QUnit.equal(result, '<div>$0</div>', 'The string.replace parameterized $0.');
+				QUnit.equal(result1, '<div>$0</div><div>$0</div><div>$0</div>', 'The string.replace parameterized $0 in an array.');
 			});
 
-			test(testId14, function () {
+			QUnit.test(testId14, function () {
 				// Internal caching with loop through the data
 				var tmpl = '<span id="${Value}" data-src="${NavigateUrl}">${Text}</span>', result, result1,
 					tmpl1 = '{{if ${Value} === "boom"}} ${Text} {{/if}}';
@@ -263,8 +263,8 @@
 				var d1 = new Date();
 				result = $.ig.tmpl(tmpl, DB2);
 				result1 = $.ig.tmpl(tmpl, DB2);
-				equal(result, result1, 'The two results differ');
-				ok($.ig._internalTmplCache.hasOwnProperty(tmpl), 'The template was not cached');
+				QUnit.equal(result, result1, 'The two results differ');
+				QUnit.ok($.ig._internalTmplCache.hasOwnProperty(tmpl), 'The template was not cached');
 				$.ig.clearTmplCache();
 				var count = 0;
 				for (prop in $.ig._internalTmplCache) {
@@ -272,7 +272,7 @@
 						count++;
 					}
 				}
-				equal(count, 0, 'The cache was not properly cleared.');
+				QUnit.equal(count, 0, 'The cache was not properly cleared.');
 				// Internal errors
 				var data = { Text: '' };
 				QUnit.throws(function () {$.ig.tmpl(tmpl1, data);}, function (err) { return err.message === $.ig.Templating.locale.undefinedArgument + '${Value}'; }, 'An error was not correctly thrown when having an undefined prop.');
@@ -280,15 +280,15 @@
 				QUnit.throws(function () {$.ig.tmpl(tmpl1, data);}, function (err) { return err.message === $.ig.Templating.locale.undefinedArgument + '${Value}'; }, 'An error was not correctly thrown when having an undefined prop.');
 			});
 
-			test(testId15, function () {
+			QUnit.test(testId15, function () {
 				var tmpl = '${Value$0}',
 					data = { Value$0: 1 },
 					result = $.ig.tmpl(tmpl, data);
 
-				equal(result, '1', 'Property with "$" in the name was not correctly evaluated.');
+				QUnit.equal(result, '1', 'Property with "$" in the name was not correctly evaluated.');
 			});
 
-			test(testId16, function () {
+			QUnit.test(testId16, function () {
 				var tmpl = '<div><ul>{{each ${prop1} }}<li>${prop1.subprop1}</li>{{/each}}</ul>' +
 							'<div>{{each ${prop2} }}<span>${prop2.subprop1}</span>{{/each}}</div>' +
 							'<ul>{{each ${prop1} }}<li>${prop1.subprop2}</li>{{/each}}</ul></div>',
@@ -306,23 +306,23 @@
 						]
 					},
 					result = $.ig.tmpl(tmpl, data);
-				equal(result, '<div><ul><li>1</li><li>2</li><li>3</li><li>4</li></ul>' +
+				QUnit.equal(result, '<div><ul><li>1</li><li>2</li><li>3</li><li>4</li></ul>' +
 							'<div><span>asd</span><span>qwe</span><span>zxc</span></div>' +
 							'<ul><li>a</li><li>b</li><li>c</li><li>d</li></ul></div>',
 							'Sequential {{each}} blocks were not evaluated correctly.');
 			});
 
-			test(testId17, function () {
+			QUnit.test(testId17, function () {
 				var tmpl = '<div><span>${Prop 1}</span><span>{{html Prop 2}}</span></div>',
 					data = {
 						"Prop 1": 'test',
 						"Prop 2": '<p>test</p>'
 					},
 					result = $.ig.tmpl(tmpl, data);
-				equal(result, '<div><span>test</span><span><p>test</p></span></div>', 'The properties with spaces were not correctly read');
+				QUnit.equal(result, '<div><span>test</span><span><p>test</p></span></div>', 'The properties with spaces were not correctly read');
 			});
 
-			test(testId18, function () {
+			QUnit.test(testId18, function () {
 				var tmpl = '<div><span>${Prop 1}</span><span>{{html Prop 2}}</span><span>${prop.prop1}</span><span>{{html prop.prop2}}</span></div>',
 					data = {
 						"Prop 1": function () {
@@ -365,11 +365,11 @@
 							}
 						}
 					];
-				equal($.ig.tmpl(tmpl, data), '<div><span>1</span><span><p>1</p></span><span>prop1 value</span><span><p>prop2 value</p></span></div>', 'The properties which are functions were not correctly read');
-				equal($.ig.tmpl(tmpl, data2), '<div><span>1</span><span><p>1</p></span><span>prop1 value</span><span><p>prop2 value</p></span></div><div><span>2</span><span><p>2</p></span><span>prop1 value 2</span><span><p>prop2 value 2</p></span></div>', 'The properties which are functions were not correctly read');
+				QUnit.equal($.ig.tmpl(tmpl, data), '<div><span>1</span><span><p>1</p></span><span>prop1 value</span><span><p>prop2 value</p></span></div>', 'The properties which are functions were not correctly read');
+				QUnit.equal($.ig.tmpl(tmpl, data2), '<div><span>1</span><span><p>1</p></span><span>prop1 value</span><span><p>prop2 value</p></span></div><div><span>2</span><span><p>2</p></span><span>prop1 value 2</span><span><p>prop2 value 2</p></span></div>', 'The properties which are functions were not correctly read');
 			});
 
-			test(testId19, function () {
+			QUnit.test(testId19, function () {
 				var tmpl = '<div>${length}</div>',
 					data = [
                       { "Name": "John Smith", "Age": 45, "length":1 },
@@ -377,10 +377,10 @@
                       { "Name": "Bob Ferguson", "Age": 27 , "length":1 }
 					],
 					result = $.ig.tmpl(tmpl, data);
-				equal(result, '<div>1</div><div>1</div><div>1</div>', 'The properties with spaces were not correctly read');
+				QUnit.equal(result, '<div>1</div><div>1</div><div>1</div>', 'The properties with spaces were not correctly read');
 			});
 
-			test(testId20, function () {
+			QUnit.test(testId20, function () {
 				var tmpl = '<div><span>${Prop-1}</span><span>{{html Prop-2}}</span><span>${Prop-3.Prop-4}</span><span>{{html Prop-3.prop-5}}</span></div>',
 					data = {
 						"Prop-1": 'test',
@@ -391,7 +391,7 @@
 						}
 					},
 					result = $.ig.tmpl(tmpl, data);
-				equal(result, '<div><span>test</span><span><p>test</p></span><span>test</span><span><p>test</p></span></div>', 'The properties with spaces were not correctly read');
+				QUnit.equal(result, '<div><span>test</span><span><p>test</p></span><span>test</span><span><p>test</p></span></div>', 'The properties with spaces were not correctly read');
 			});
 		});
 	</script>
